Fix Scrollbar x

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,7 @@ body {
   background-attachment: fixed;
   height: 100vh;
   user-select: none;
+  overflow-x: hidden;
 }
 
 #textgradient {
